--- a/branch/reels.html
+++ b/branch/reels.html
@@ -212,28 +212,30 @@
     <!-- Enhanced Reels Section -->
     <section class="py-8 sm:py-12 md:py-16 mt-14 sm:mt-16">
         <div class="container mx-auto px-3 sm:px-4">
-            <!-- Advertisement Placeholder -->
-            <section class="ad-placeholder-section">
-                <div class="ad-container premium-ad" onclick="openAdAnalyticsModal()">
-                    <div class="ad-animation">
-                        <div class="pulse-ring"></div>
-                        <div class="pulse-ring"></div>
-                    </div>
-                    <div class="ad-content">
-                        <span class="ad-label">Advertisement</span>
-                        <h3 class="ad-title">Boost Your Reach Today</h3>
-                        <p class="ad-text">Premium placement available</p>
-                        <button class="ad-cta" onclick="openAdAnalyticsModal()">Learn More</button>
-                    </div>
-                    <div class="ad-visual">
-                        <div class="ad-circles">
-                            <div class="circle circle-1"></div>
-                            <div class="circle circle-2"></div>
-                            <div class="circle circle-3"></div>
-                        </div>
+
+
+        <!-- Advertisement Placeholder -->
+        <section class="ad-placeholder-section">
+            <div class="ad-container premium-ad" onclick="openAdAnalyticsModal()">
+                <div class="ad-animation">
+                    <div class="pulse-ring"></div>
+                    <div class="pulse-ring"></div>
+                </div>
+                <div class="ad-content">
+                    <span class="ad-label">Advertisement</span>
+                    <h3 class="ad-title">Boost Your Reach Today</h3>
+                    <p class="ad-text">Premium placement available</p>
+                    <button class="ad-cta" onclick="openAdAnalyticsModal()">Learn More</button>
+                </div>
+                <div class="ad-visual">
+                    <div class="ad-circles">
+                        <div class="circle circle-1"></div>
+                        <div class="circle circle-2"></div>
+                        <div class="circle circle-3"></div>
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
 
             <!-- Enhanced Filter Buttons -->
             <div class="filter-container mb-8">
@@ -723,6 +725,200 @@
         </div>
     </div>
 </div>
+
+<!-- Ad Analytics Modal -->
+    <div class="modal" id="adAnalyticsModal">
+        <div class="modal-overlay" onclick="closeAdAnalyticsModal()"></div>
+        <div class="modal-content ad-analytics-modal">
+            <div class="modal-header">
+                <h2>Advertisement Analytics & Information</h2>
+                <button class="modal-close" onclick="closeAdAnalyticsModal()">×</button>
+            </div>
+            <div class="modal-body">
+                <div class="ad-stats-grid">
+                    <div class="ad-stat-card">
+                        <div class="ad-stat-icon">👁️</div>
+                        <div class="ad-stat-info">
+                            <h3>2.5M+</h3>
+                            <p>Monthly Impressions</p>
+                        </div>
+                        <span>Mock</span>
+                    </div>
+                    <div class="ad-stat-card">
+                        <div class="ad-stat-icon">🎯</div>
+                        <div class="ad-stat-info">
+                            <h3>4.2%</h3>
+                            <p>Average CTR</p>
+                        </div>
+                        <span>Mock</span>
+                    </div>
+                    <div class="ad-stat-card">
+                        <div class="ad-stat-icon">💰</div>
+                        <div class="ad-stat-info">
+                            <h3>$0.45</h3>
+                            <p>Average CPC</p>
+                        </div>
+                        <span>Mock</span>
+                    </div>
+                    <div class="ad-stat-card">
+                        <div class="ad-stat-icon">📈</div>
+                        <div class="ad-stat-info">
+                            <h3>325%</h3>
+                            <p>Average ROI</p>
+                        </div>
+                        <span>Mock</span>
+                    </div>
+                </div>
+
+                <div class="advertisers-section">
+                    <h3>Our Premium Advertisers</h3>
+                    <div class="advertisers-grid">
+                        <div class="advertiser-card">
+                            <img src="https://via.placeholder.com/80" alt="Adobe">
+                            <span>Your company name</span>
+                        </div>
+                        <div class="advertiser-card">
+                            <img src="https://via.placeholder.com/80" alt="Canon">
+                            <span>Your company name</span>
+                        </div>
+                        <div class="advertiser-card">
+                            <img src="https://via.placeholder.com/80" alt="Netflix">
+                            <span>Your company name</span>
+                        </div>
+                        <div class="advertiser-card">
+                            <img src="https://via.placeholder.com/80" alt="Sony">
+                            <span>Your company name</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="testimonials-section">
+                    <h3>Client Testimonials</h3>
+                    <div class="testimonials-carousel">
+                        <div class="testimonial-card">
+                            <div class="testimonial-content">
+                                <p>"Advertising on Astegni has been game-changing for our film equipment business. We've
+                                    seen a 400% increase in qualified leads."</p>
+                            </div>
+                            <div class="testimonial-author">
+                                <img src="https://via.placeholder.com/40" alt="Author">
+                                <div>
+                                    <h4>Sarah Yohannes</h4>
+                                    <span>Marketing Director, FilmGear Pro</span>
+                                    <span>Mock</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial-card">
+                            <div class="testimonial-content">
+                                <p>"The targeted audience on this platform is exactly what we needed. Our course
+                                    enrollments have doubled since we started advertising here."</p>
+                            </div>
+                            <div class="testimonial-author">
+                                <img src="https://via.placeholder.com/40" alt="Author">
+                                <div>
+                                    <h4>Christian Abebe</h4>
+                                    <span>CEO, Digital Arts Academy</span>
+                                    <span>Mock</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ad-packages">
+                    <h3>Advertising Packages</h3>
+                    <div class="packages-grid">
+                        <div class="package-card">
+                            <h4>Upto Three days</h4>
+                            <div class="package-price">2000 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card featured">
+                            <div class="featured-badge">Most Popular</div>
+                            <h4>Upto seven days</h4>
+                            <div class="package-price">/1800 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card">
+                            <h4>Upto Half a month</h4>
+                            <div class="package-price">1500 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card">
+                            <h4>Upto a Month</h4>
+                            <div class="package-price">1200 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card">
+                            <h4>Upto Three Months</h4>
+                            <div class="package-price">1000 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card">
+                            <h4>Up to Six Months</h4>
+                            <div class="package-price">800 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card">
+                            <h4>Upto Nine Months</h4>
+                            <div class="package-price">600 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                        <div class="package-card">
+                            <h4>Upto a Year</h4>
+                            <div class="package-price">400 ETB/day</div>
+                            <ul>
+                                <li>Unlimited impressions</li>
+                                <li>Custom targeting</li>
+                                <li>Priority placement</li>
+                                <li>Full analytics suite</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-secondary" onclick="closeAdAnalyticsModal()">Close</button>
+                <button class="btn-primary" onclick="startAdvertising()">Start Advertising</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Enhanced Footer -->
     <footer class="footer-section" id="footer" role="contentinfo">
