--- a/my-profile-tier-1/parent-profile.html
+++ b/my-profile-tier-1/parent-profile.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/auth-modal.css">
     <link rel="stylesheet" href="../css/profile-system.css"> <!-- Profile system CSS -->
     <link rel="stylesheet" href="../css/parent-profile.css">
+    <link rel="stylesheet" href="../css/ad-modal.css">
 
     <style>
         /* Modal Styles */
@@ -3006,7 +3007,7 @@
             }
         }, 100);
     </script>
-<!-- In student-profile.html or any protected page -->
+
 <script src="../js/auth.js"></script>
 <script>
     // Check authentication on page load
@@ -3039,6 +3040,7 @@
     })();
 </script>
 <script src="../js/profile-system.js"></script> <!-- Profile system JS -->   
+<script src="../js/ad-modal.js"></script>
 <script src="../js/coming-soon-modal.js"></script>
 </body>
 
