--- a/my-profile-tier-1/student-profile.html
+++ b/my-profile-tier-1/student-profile.html
@@ -231,6 +231,7 @@
         }
     </style>
 <link rel="stylesheet" href="../css/coming-soon-modal.css">
+    <link rel="stylesheet" href="../css/ad-modal.css">
     
 </head>
 
@@ -3723,6 +3724,7 @@
     <script src="../js/institute-profile-4.js"></script>
 <script src="../js/profile-system.js"></script> <!-- Profile system JS -->   
 <script src="../js/coming-soon-modal.js"></script>
+<script src="../js/ad-modal.js"></script>
 </body>
 
 </html>
