--- a/view-profile-tier-1/view-tutor.html
+++ b/view-profile-tier-1/view-tutor.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/institute.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/auth-modal.css">
+    <link rel="stylesheet" href="../css/ad-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* View-specific styles */
@@ -528,7 +529,7 @@
             <div class="profile-main-info">
                 <div class="profile-info-wrapper">
                     <div class="profile-avatar-container">
-                        <img src="../pictures/tutor image.jpg" alt="Tutor Profile" class="profile-avatar">
+                        <img src="../pictures/tutor-male-young.jpg" alt="Tutor Profile" class="profile-avatar">
                         <span class="online-indicator"></span>
                     </div>
 
@@ -2003,6 +2004,7 @@
 
     <script src="../js/auth.js"></script>   
 <script src="../js/coming-soon-modal.js"></script>
+<script src="../js/ad-modal.js"></script>
 </body>
 
 </html>
