--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/index.css" rel="stylesheet" />
     <link href="css/coming-soon-modal.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/ad-modal.css">
     <!-- <link href="css/enhancement.css" rel="stylesheet"/> -->
 
     <!-- Favicon -->
@@ -337,7 +338,8 @@
                         <h3 class="ad-headline">Transform Your Ad. Experience</h3>
                         <p class="ad-description">Advertise to the most targated audience.</p>
                         <div class="ad-buttons">
-                            <button class="ad-primary-btn"  onclick="openAdAnalyticsModal()">Learn more</button>
+
+                            <button class="ad-cta" onclick="openAdAnalyticsModal()">Learn more</button>
                         </div>
                     </div>
                     <div class="ad-visual-content">
@@ -445,6 +447,33 @@
             </div>
         </div>
     </section>
+
+
+    <!-- Premium Advertisement -->
+    <section class="ad-section premium">
+        <div class="container mx-auto px-4">
+            <div class="premium-ad-container">
+                <div class="ad-backdrop"></div>
+                <div class="ad-content-wrapper">
+                    <div class="ad-text-content">
+                        <span class="ad-tag">Place your Ad. here</span>
+                        <h3 class="ad-headline">Transform Your Ad. Experience</h3>
+                        <p class="ad-description">Advertise to the most targated audience.</p>
+                        <div class="ad-buttons">
+                            <button class="ad-cta" onclick="openAdAnalyticsModal()">Learn more</button>
+                        </div>
+                    </div>
+                    <div class="ad-visual-content">
+                        <div class="floating-card card-1"></div>
+                        <div class="floating-card card-2"></div>
+                        <div class="floating-card card-3"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <!-- Enhanced Courses Section -->
     <section class="courses-section py-16">
@@ -2418,6 +2447,185 @@
         };
 
     </script>
+
+    <script>
+        // ============================================
+        // AD PACKAGE MANAGER - DYNAMIC PACKAGE SYSTEM
+        // ============================================
+        const AdPackageManager = {
+            // Package configuration
+            packages: [
+                {
+                    id: 'three-days',
+                    title: 'Up to Three days',
+                    pricePerDay: 2000,
+                    currency: 'ETB',
+                    duration: 3,
+                    featured: false,
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Full analytics suite'
+                    ]
+                },
+                {
+                    id: 'seven-days',
+                    title: 'Up to Seven days',
+                    pricePerDay: 1800,
+                    currency: 'ETB',
+                    duration: 7,
+                    featured: true,
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Full analytics suite',
+                    ]
+                },
+                {
+                    id: 'fifteen-days',
+                    title: 'Up to fifteen days',
+                    pricePerDay: 1500,
+                    currency: 'ETB',
+                    duration: 15,
+                    featured: true,
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Full analytics suite',
+                    ]
+                },
+                {
+                    id: 'one-month',
+                    title: 'Up to one month',
+                    pricePerDay: 1200,
+                    currency: 'ETB',
+                    duration: 30,
+                    featured: true,
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Full analytics suite'
+                    ]
+                },
+                {
+                    id: 'three-months',
+                    title: 'Up to three months',
+                    pricePerDay: 1000,
+                    currency: 'ETB',
+                    duration: 90,
+                    featured: true,
+                    badge: 'Most Popular',
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Priority placement',
+                        'Full analytics suite'
+                    ]
+                },
+                {
+                    id: 'six-months',
+                    title: 'Up to six months',
+                    pricePerDay: 800,
+                    currency: 'ETB',
+                    duration: 180,
+                    featured: true,
+                    badge: 'Most Popular',
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Priority placement',
+                        'Full analytics suite',
+                    ]
+                },
+                {
+                    id: 'nine-months',
+                    title: 'Up to nine months',
+                    pricePerDay: 600,
+                    currency: 'ETB',
+                    duration: 270,
+                    featured: true,
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Priority placement',
+                        'Full analytics suite',
+                    ]
+                },
+                {
+                    id: 'yearly',
+                    title: 'Up to a year',
+                    pricePerDay: 500,
+                    currency: 'ETB',
+                    duration: 365,
+                    featured: true,
+                    badge: 'Most Popular',
+                    features: [
+                        'Unlimited impressions',
+                        'Custom targeting',
+                        'Priority placement',
+                        'Full analytics suite',
+                    ]
+                },
+                // ... rest of the packages array from my previous response ...
+            ],
+
+            renderPackages() {
+                const packagesSection = document.querySelector('#adAnalyticsModal .ad-packages');
+                if (!packagesSection) return;
+
+                packagesSection.innerHTML = `
+            <h3>Advertising Packages</h3>
+            <div class="packages-grid">
+                ${this.packages.map(pkg => this.createPackageCard(pkg)).join('')}
+            </div>
+        `;
+            },
+
+            createPackageCard(pkg) {
+                const totalPrice = pkg.pricePerDay * pkg.duration;
+                const savings = this.calculateSavings(pkg);
+
+                return `
+            <div class="package-card ${pkg.featured ? 'featured' : ''}" data-package-id="${pkg.id}">
+                ${pkg.badge ? `<div class="featured-badge">${pkg.badge}</div>` : ''}
+                <h4>${pkg.title}</h4>
+                <div class="package-price">${pkg.pricePerDay.toLocaleString()} ${pkg.currency}/day</div>
+                <div class="package-total">Total: ${totalPrice.toLocaleString()} ${pkg.currency}</div>
+                ${savings > 0 ? `<div class="package-savings">Save ${savings.toLocaleString()} ${pkg.currency}</div>` : ''}
+                <ul>
+                    ${pkg.features.map(feature => `<li>${feature}</li>`).join('')}
+                </ul>
+                <button class="btn-primary" onclick="selectPackage('${pkg.id}')">
+                    Select Package
+                </button>
+            </div>
+        `;
+            },
+
+            calculateSavings(pkg) {
+                const basePrice = 2000;
+                const actualTotal = pkg.pricePerDay * pkg.duration;
+                const expectedTotal = basePrice * pkg.duration;
+                return Math.max(0, expectedTotal - actualTotal);
+            }
+        };
+
+        // Global function for package selection
+        window.selectPackage = function (packageId) {
+            const pkg = AdPackageManager.packages.find(p => p.id === packageId);
+            if (!pkg) return;
+
+            Utils.showToast(`✅ Selected: ${pkg.title} - ${pkg.pricePerDay} ${pkg.currency}/day`, "success");
+
+            // You can add checkout redirection here
+            setTimeout(() => {
+                // window.location.href = `/checkout?package=${packageId}`;
+                console.log('Proceed to checkout with:', pkg);
+            }, 1500);
+        };
+
+    </script>
+    <script src="js/ad-modal.js"></script>
 </body>
 
 </html>
