--- a/view-profile-tier-1/view-parent.html
+++ b/view-profile-tier-1/view-parent.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/auth-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link rel="stylesheet" href="../css/coming-soon-modal.css">
+    <link rel="stylesheet" href="../css/ad-modal.css">
 </head>
 
 <body>
@@ -2234,6 +2235,7 @@
     <script src="../js/institute-profile-3.js"></script>
     <script src="../js/institute-profile-4.js"></script>   
 <script src="../js/coming-soon-modal.js"></script>
+<script src="../js/ad-modal.js"></script>
 </body>
 
 </html>
