--- a/view-profile-tier-1/view-student.html
+++ b/view-profile-tier-1/view-student.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
+    <link rel="stylesheet" href="../css/ad-modal.css">
 <link rel="stylesheet" href="../css/coming-soon-modal.css">
     
 </head>
@@ -1757,6 +1758,7 @@
     <script src="../js/institute-profile-3.js"></script>
     <script src="../js/institute-profile-4.js"></script>   
 <script src="../js/coming-soon-modal.js"></script>
+<script src="../js/ad-modal.js"></script>
 </body>
 
 </html>
