--- a/branch/find-tutors.html
+++ b/branch/find-tutors.html
@@ -303,6 +303,10 @@
                     <span>Favorites</span>
                 </label>
                 <label class="filter-checkbox">
+                    <input type="checkbox" name="saved" value="true">
+                    <span>Saved</span>
+                </label>
+                <label class="filter-checkbox">
                     <input type="checkbox" name="searchHistory" value="true">
                     <span>Search history</span>
                 </label>
@@ -339,6 +343,7 @@
                     <option value="">All Methods</option>
                     <option value="Online">Online</option>
                     <option value="In-person">In-person</option>
+                    <option value="self-paced">Self-paced</option>
                     <option value="Hybrid">Hybrid</option>
                 </select>
             </div>
@@ -1297,5 +1302,10 @@
     <script src="../js-tier-1/coming-soon-modal.js"></script>
     <script src="../js-tier-1/ad-modal.js"></script>
 </body>
-
+    counting animation
+    price should be 100-300 for academics and 300-500 for certifications.
+    search history filter
+    Near my location
+    training center should show coming soon
+    css and enhanced side bar.
 </html>
