--- a/index.html
+++ b/index.html
@@ -207,25 +207,25 @@
                             <div class="counter-icon">👨‍👩‍👧‍👦</div>
                             <h3 id="counter-parents" class="counter-number">0</h3>
                             <p class="counter-label">Registered Parents</p>
-                            <span>Mock</span>
+                            <span class="mock-badge">Test data</span>
                         </div>
                         <div class="counter-card-enhanced hover-lift">
                             <div class="counter-icon">🎓</div>
                             <h3 id="counter-students" class="counter-number">0</h3>
                             <p class="counter-label">Students</p>
-                            <span>Mock</span>
+                            <span class="mock-badge">Test data</span>
                         </div>
                         <div class="counter-card-enhanced hover-lift">
                             <div class="counter-icon">👨‍🏫</div>
                             <h3 id="counter-tutors" class="counter-number">0</h3>
                             <p class="counter-label">Expert Tutors</p>
-                            <span>Mock</span>
+                            <span class="mock-badge">Test data</span>
                         </div>
                         <div class="counter-card-enhanced hover-lift">
                             <div class="counter-icon">🏢</div>
                             <h3 id="counter-centers" class="counter-number">0</h3>
                             <p class="counter-label">Training Centers</p>
-                            <span>Mock</span>
+                            <span class="mock-badge">Test data</span>
                         </div>
                     </div>
                     <div class="counter-grid-bottom">
@@ -233,13 +233,13 @@
                             <div class="counter-icon">📚</div>
                             <h3 id="counter-books" class="counter-number">0</h3>
                             <p class="counter-label">Books Available</p>
-                            <span>Mock</span>
+                            <span class="mock-badge">Test data</span>
                         </div>
                         <div class="counter-card-enhanced hover-lift">
                             <div class="counter-icon">💼</div>
                             <h3 id="counter-jobs" class="counter-number">0</h3>
                             <p class="counter-label">Job Opportunities</p>
-                            <span>Mock</span>
+                            <span class="mock-badge">Test data</span>
                         </div>
                     </div>
                 </div>
@@ -376,7 +376,7 @@
                         <div class="news-meta">
                             <span class="news-date">Today</span>
                             <span class="news-category">Education</span>
-                            <span>Mock</span>
+                            <span>Test data</span>
                         </div>
                     </div>
                     <a href="#" onclick="handleNavLinkClick(event, 'news')" class="news-cta">
